--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
     <artifactId>postgresql</artifactId>
     <version>42.3.6</version>
 </dependency>
+<dependency>
+    <groupId>org.modelmapper</groupId>
+    <artifactId>modelmapper</artifactId>
+    <version>3.1.1</version> <!-- Assurez-vous d'utiliser la dernière version stable -->
+</dependency>
 
 	</dependencies>
 
